Changelog:

Key:
  + Addition
  = Fix
  ! Change
  - Removal

Version 1.0.0 | Tested on CB 1.4.6-R0.2
 + First release
 + Added Metrics for stats
 + Added an update check